# base_mono

./: .editorconfig  .gitignore  DEVELOPMENT.md  Makefile  README.md  TEMPLATE_GUIDE.md  docker-compose.yml  env.example  package-lock.json  package.json  setup-new-project.ps1  setup-new-project.sh
api/: Dockerfile  env.example  manage.py  pyproject.toml  requirements.txt  wsgi.py
api/app/: __init__.py  cli.py  config.py  extensions.py
api/app/api/health/: __init__.py  routes.py
api/app/api/v1/auth/: routes.py  schemas.py  service.py
api/app/api/v1/users/: __init__.py  routes.py  schemas.py  service.py
api/app/core/: exceptions.py  logging.py  pagination.py  security.py  utils.py
api/app/domain/: __init__.py  dtos.py  models.py
api/app/infra/: __init__.py  mailer.py  storage.py  tasks.py
api/app/infra/repositories/: __init__.py  base.py  user_repo.py
client/: Dockerfile  env.example  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
client/src/__tests__/: setup.ts
client/src/app/: App.tsx  main.tsx
client/src/components/: Button.tsx  Card.tsx  Header.tsx  Input.tsx  Layout.tsx  ProtectedRoute.tsx  Sidebar.tsx
client/src/features/auth/pages/: LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx
client/src/features/dashboard/pages/: DashboardPage.tsx
client/src/features/users/pages/: UserDetailPage.tsx  UsersPage.tsx
client/src/styles/: index.css
